<resources>
    <string name="app_name">PushTime</string>
    <string name="action_settings">Settings</string>
    <string name="texsuprimeravez">Si es su primera vez por aqui, abra una cuenta</string>
    <string name="inemail">MiCorreo@Ejemplo.com</string>
    <string name="inpass">MiContraseña...</string>
    <string name="registrar">Crear cuenta </string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="title_activity_listade_proyectos">Proyectos...</string>
    <string name="title_activity_registro">Registro de cuenta nueva...</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="correoElectronico">Correo electrónico:</string>
    <string name="confirmarCorreoElectronico">Confirmar correo:</string>
    <string name="contraseña">Contraseña:</string>
    <string name="confirmarContraseña">Confirmar contraseña:</string>
    <string name="registrarse"> Registrarse:</string>
    <string name="title_activity_agregar_nuevo_proyecto">Agregar Nuevo Proyecto</string>






    <string name="nombredeProyecto"> Nombre del nuevo proyecto:</string>
    <string name="Fechaini"> Fecha de inicio:</string>
    <string name="FechaFin"> Fecha de termino (Opcional):</string>
    <string name="caledario"> calendario:</string>







</resources>
