<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.monstersoftware.pushtime.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/inemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inemail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/inpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inpass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/iniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar" />


        <TextView
            android:id="@+id/texsuprimeravez"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texsuprimeravez"
            android:layout_weight="0.14" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
