<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.monstersoftware.pushtime.activityRegistro"
    tools:showIn="@layout/activity_registro">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textViewemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correoElectronico"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editText_email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/inemail"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textViewconfirmaremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmarCorreoElectronico"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <EditText
            android:id="@+id/editText_email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/inemail"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editTextpass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/inpass"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmarContraseña"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <EditText
            android:id="@+id/editTextpass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/inpass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
